2002-08-22  david wallin  <david.wallin@ul.ie>

	* elisp/distel-ie.el (erl-ie-copy-[buffer|region]-to-session): Move 
	  the pointer to the end of the buffer before inserting.
	
	* elisp/distel-ie.el (erl-ie-session): The welcome message should 
	  only occur once (on startup), i.e., that the user is welcome back 
	  is now implicit.

	* erl/distel_ie.erl (add_remote_call_info/2): Added the string tuple. 
	  So 'cd("/usr/local").' can now properly be evaluated.

2002-08-22  Luke Gorrie  <luke@bluetail.com>

	* elisp/erl-service.el (erl-bury-viewer): Add this command, which
	is like `erl-quit-viewer' but buries rather than kills the buffer.
	(erl-find-source): Improved error reportage, and now only adding
	locations to the M-, history when we actually jump somewhere.

	* elisp/edb.el: Various debugger improvements: Monitor buffer pops
	up when an unattached process hits a breakpoint (unless
	`edb-popup-monitor-on-event' is nil); Monitor better intercepts
	debug commands to either start monitoring or switch nodes; 'q' now
	hides rather than kills the monitor buffer/process ('k' kills);
	Return and C-m can be used to attach to a process from the monitor,
	as well as the traditional 'a'.

2002-08-21  Luke Gorrie  <luke@bluetail.com>

	* config/emacs-init-snippet.el.in: Now being careful to add
	Distel at the end of the load-path, so that the
	possibly-redundant files we include for compatibility (ewoc.el,
	md5.el) don't override any locally installed ones.

	* README, Makefile.in (VERSION): Increased 3.0a -> 3.0b to
	distinguish from the version installed on Bluetail'ers' machines
	earlier today.

	* elisp/erl.el (erl-reductions): Added reductions counter, saying
	how many times a process has been executed (_not_ how many calls
	it has made, like Erlang reductions). This can be inspected
	directly for debug purposes.

	* config/emacs-init-snippet.el.in: Using autoconf on the .emacs
	snippet to setup the right load-path. It seems that just making a